[SPLUNK] Error Categorization: Config file changes

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -1,193 +1,283 @@
 {
 "intents":
-        {"first_level": ["failure",
-		"error",
-		"failed",
-		"not available",
-		"not found",
-		"could not checkout",
-		"running on ",
-		"no such property",
-		"couldn't find",
-		"fatal:",
-		"does not exist",
-		"there are no nodes"],
-
-		"error_category": {
-		
-		"gitlab error": "Gitlab Error",
-        "abortexception:": "Exception Error",
-        "artifact error": "Artifact Error",
-        "keyerror:": "Key Error",
-        "nameerror:": "Name Error",
-        "typeerror:": "Type Error",
-        "loading libraries failed": "Load Error",
-        "attributeerror: ": "Attribute Error",
-        "artifactory": "Artifactory Error",
-        "abi_warning:": "ABI Warning",
-        "raise abiexception": "ABI Exception Error",
-        "abi_exception": "ABI Exception Error",
-        "could not find": "Missing Object Error",
-        "failed to run ticgen:": "TICGEN Error",
-        "connectionerror": "Connection Error",
-        "connectionrefusederror": "Connection Error",
-        "directory is not empty": "Filesystem Error",
-        "nmake : fatal error" : "Nmake Error",
-        "failed: connection":"Connection Error",
-        "filenotfounderror:":"Missing Object Error",
-        "cannot load":"Load Error",
-		"package_write_rpm": "Compilation Error",
-		"error: failed to push some refs to": "Connectivity Error" ,
-		"requires: openvino": "Compilation Error",
-		"configuration error": "Application Error",
-		"java.lang.": "Jave Exception Error",
-		"drivers/spi/spi-dw.h" :  "Compilation Error",
-		"thunderbay": "Compilation Error",
-		"mainline-tracking": "Compilation Error",
-		"patch failed": "Compilation Error",
-		"meson": "Compilation Error",
-		"mesa": "Compilation Error",
-		"error: cairo": "Compilation Error",
-		"cairo": "Compilation Error" ,
-		"no such container": "Container Error",
-		"java.io.ioexception": "Jave Exception Error",
-		"do_populate_sdk": "Compilation Error",
-		"movisoc-fwu": "Compilation Error",
-		"oe_runmake": "Compilation Error",
-		"makefile:70:": "Compilation Error",
-		"sanity": "Connectivity Error",
-		"remote repo": "Connectivity Error",
-		"500 internal server error": "Connectivity Error",
-		"linux-ese-po-kernel": "Compilation Error",
-		"thb-lin-bsp-bd-dly": "Compilation Error",
-		"recipe tbh-vpual":"Compilation Error",
-		"do_image_wic":"Compilation Error" ,
-		"no dtb found": "Compilation Error",
-		"unable to fetch url from any source": "Compilation Error",
-		"fetcher failure for url:": "Connectivity Error",
-		"connection timed out": "Connectivity Error",
-		"/gpu/drm/": "Compilation Error",
-		"linux-intel-ese": "Compilation Error",
-		"iso-codes-4.2-r0": "Compilation Error",
-		"ore-image-ese-initramfs-base-1.0-r0": "Compilation Error",
-		"core-image-ese-initramfs-base": "Compilation Error",
-		"not found": "Missing Object Error",
-		"not available": "Missing Object Error",
-		"doesn't exist": "Missing Object Error",
-		"couldn't find": "Missing Object Error",
-		"do_fetch": "Compilation Error",
-		"no such property": "Missing Object Error",
-		"error: task ": "Compilation Error",
-		"error: logfile of failure stored": "Compilation Error",
-		"does not exist":"Missing Object Error",
-		"there are no nodes" : "Container Error",
-		"function failed: " : "Compilation Error",
-		"do_configure" : "Compilation Error",
-		"error: nothing rprovides" :"Compilation Error",
-		"error: required build" :"Compilation Error"
-
-		},
-		
+    {
+        "first_level": [
+            "failure",
+            "error",
+            "failed",
+            "not available",
+            "not found",
+            "could not checkout",
+            "running on ",
+            "no such property",
+            "couldn't find",
+            "fatal:",
+            "does not exist",
+            "there are no nodes",
+            "not recognized",
+            "[ERROR]",
+            "HTTPError",
+            "URLError",
+            "CONFLICT",
+            "stderr"
+        ],
+        
+        "error_category": {
+            "gitlab error": "Application Error: Gitlab",
+            "unable to access 'https://gitlab.devtools.intel.com": "Application Error: Gitlab",
+            "GitLab is not responding": "Connectivity Error: Gitlab",
+            
+            "artifact error": "Connectivity Error: Artifactory",
+            "artifactory": "Connectivity Error: Artifactory",
+            "Artifactory": "Connectivity Error: Artifactory",
+            "uploading artifacts": "Connectivity Error: Artifactory",
+            "Expectation Failed": "Application Error: Artifactory",
+            
+            "keyerror:": "Key Error",
+            "PriKey Size is NOT same as PubKey": "Key Error",
+            
+            "nameerror:": "Name Error",
+            
+            "typeerror:": "Type Error",
+            
+            "loading libraries failed": "Load Error",
+            
+            "attributeerror: ": "Attribute Error",
+            
+            "abi_warning:": "ABI Warning",
+            "raise abiexception": "ABI Exception Error",
+            "abi_exception": "ABI Exception Error",
+            "abortexception:": "Exception Error",
+            
+            "could not find": "Missing Object Error",
+            "filenotfounderror:":"Missing Object Error",
+            
+            "failed to run ticgen:": "TICGEN Error",
+            
+            "connectionerror": "Connectivity Error",
+            "connectionrefusederror": "Connectivity Error",
+            "failed: connection":"Connectivity Error",
+            "error: failed to push some refs to": "Connectivity Error" ,
+            "sanity": "Connectivity Error",
+            "500 internal server error": "Connectivity Error",
+            "fetcher failure for url:": "Connectivity Error",
+            "connection timed out": "Connectivity Error",
+            "failed to fetch": "Connectivity Error",
+            
+            "Error cloning": "Connectivity Error: GIT",
+            "git clone": "Connectivity Error: GIT",
+            "cloning the git-repo": "Connectivity Error: GIT",
+            
+            "directory is not empty": "Filesystem Error",
+            
+            "nmake : fatal error" : "Nmake Error",
+            
+            "cannot load":"Load Error",
+            
+            "A mandatory update for edkrepo": "System Error",
+            
+            "package_write_rpm": "Compilation Error",
+            "requires: openvino": "Compilation Error",
+            "drivers/spi/spi-dw.h" :  "Compilation Error",
+            "thunderbay": "Compilation Error",
+            "mainline-tracking": "Compilation Error",
+            "patch failed": "Compilation Error",
+            "meson": "Compilation Error",
+            "mesa": "Compilation Error",
+            "error: cairo": "Compilation Error",
+            "cairo": "Compilation Error" ,
+            "do_populate_sdk": "Compilation Error",
+            "movisoc-fwu": "Compilation Error",
+            "oe_runmake": "Compilation Error",
+            "makefile:70:": "Compilation Error",
+            "linux-ese-po-kernel": "Compilation Error",
+            "thb-lin-bsp-bd-dly": "Compilation Error",
+            "recipe tbh-vpual":"Compilation Error",
+            "do_image_wic":"Compilation Error" ,
+            "no dtb found": "Compilation Error",
+            "unable to fetch url from any source": "Compilation Error",
+            "/gpu/drm/": "Compilation Error",
+            "linux-intel-ese": "Compilation Error",
+            "iso-codes-4.2-r0": "Compilation Error",
+            "ore-image-ese-initramfs-base-1.0-r0": "Compilation Error",
+            "core-image-ese-initramfs-base": "Compilation Error",
+            "do_fetch": "Compilation Error",
+            "error: task ": "Compilation Error",
+            "error: logfile of failure stored": "Compilation Error",
+            "function failed: " : "Compilation Error",
+            "do_configure" : "Compilation Error",
+            "error: nothing rprovides" :"Compilation Error",
+            "error: required build" :"Compilation Error",
+            "Merge conflict": "Compilation Error",
+            "Makefile:1756": "Compilation Error",
+            "core-image-ese-dev-1.0-r0 do_image_wic": "Compilation Error",
+            "following arguments are required": "Compilation Error",
+            "Failed to load image": "Compilation Error" ,
+            "not recognized as an internal or external command,": "Compilation Error" ,
+            "Failed to build module": "Compilation Error" ,
+            "failed with exit code '1'": "Compilation Error" ,
+            "failed with exit code 1": "Compilation Error" ,
+            "exit code: 1": "Compilation Error",
+            "non-zero exit code": "Compilation Error" ,
+            "Failed to merge": "Compilation Error" ,
+            "error U1077": "Compilation Error" ,
+            "ERROR 0004": "Compilation Error" ,
+            "ERROR 1001": "Compilation Error" ,
+            "FSP build": "Compilation Error",
+            "BIOS Build": "Compilation Error",
+            "error 7000": "Compilation Error",
+            "Makefile:93": "Compilation Error",
+            "CMake Error": "Compilation Error",
+            "MSB1009": "Compilation Error",
+            "Makefile:1703": "Compilation Error",
+            "Makefile:132": "Compilation Error",
+            "Makefile:24": "Compilation Error",
+            "No such file or directory": "Compilation Error",
+            "GNUmakefile:19": "Compilation Error",
+            "GNUmakefile:74": "Compilation Error",
+            "Makefile:1308": "Compilation Error",
+            
+            "configuration error": "Application Error",
+            "Server error": "Application Error",
+            
+            "java.lang.": "Java Exception Error",
+            "java.io.ioexception": "Java Exception Error",
+            
+            "no such container": "Container Error",
+            "there are no nodes": "Container Error",
+            
+            "not found": "Missing Object Error",
+            "not available": "Missing Object Error",
+            "doesn't exist": "Missing Object Error",
+            "couldn't find": "Missing Object Error",
+            "no such property": "Missing Object Error",
+            "does not exist":"Missing Object Error",
+            
+            "kwadmin: Connection to": "Connectivity Error: Klocwork",
+            "kwadmin: License check failed": "Application Error: Klocwork",
+            "kwadmin: Cannot load project": "Application Error: Klocwork",
+            "kwadmin: Incompatible server version": "Application Error: Klocwork",
+            "Error occurred during build: Tables directory": "Application Error: Klocwork",
+            "Source list is empty": "Application Error: Klocwork",
+            
+            "Couldn't find any revision to build": "Configuration Error",
+            "groovy.lang.MissingPropertyException": "Configuration Error",
+            
+            "HTTPError: 401 - No permission": "Application Error: BDBA",
+            "HTTPError: 502 - Invalid responses from another server/proxy.": "Connectivity Error: BDBA",
+            "HTTPError: 404 - Nothing matches the given URI": "Application Error: BDBA",
+            "URLError: [Errno 104] Connection reset by peer": "Connectivity Error: BDBA",
+            "Results is not yet ready": "Application Error: BDBA",
+            "Scanning is failed": "Application Error: BDBA",
+            "HTTPError: 503 - The server cannot process the request due to a high load": "Application Error: BDBA",
+            "[Errno 111] Connection refused": "Application Error: BDBA",
+            
+            "bdstool: scan failed": "Application Error: Protex",
+            "BOM list error": "Application Error: Protex"
+            
+        },
+        
         "patterns": [
-			 				"failed to sign: ",
-							 "abi_info:",
-							 "[debug]",
-							 "errorlog.c",
-							 "error.cpp",
-							 "commit message:",
-							 "echo",
-							 "onerrorcontinueanalysis",
-							 "pending error messages",
-							 "handle_error",
-							 "raise error",
-							 "diagnostic: edss2 : json call",
-							 "errorlib.c",
-							 "0 error(s)",
-							 "erroruixmlwriter.cpp",
-							 "error.h",
-							 "errorhandlingcontroller.js",
-							 "errorlib.lib errorlib.obj",
-							 "errorlib.obj  errorlib.lib",
-							 "c:\\program files (x86)\\microsoft visual studio",
-							 "release>cd c:\\jenkins\\workspace",
-							 "release>nmake clean all",
-							 "pluginuixmlwriter.obj rootuixmlwriter.obj",
-							 ">if 0 neq 0 goto eof",
-							 "warning:root:[abi_warn_00000010]",
-							 "failed in branch",
-							 "cache entry deserialization failed",
-							 "enoerror",
-							 "eusererrorcode",
-							 "werror",
-							 "running on node:",
-							 "\\..\\sources\\graph",
-							 "error  ...",
-							 "acpi....",
-			 				 "packages\\errorlib\\winx64\\debug",
-			 				 "xlsdk_input.lib(_error.obj) : warning",
-			 				 ": warning c","error(s) and ",
-							 "no error and failure messages",
-							 "finished: failure",
-			 				 "job failed!!!",
-							 "build failed.","_tdperrormessage",
-			 				 "2 error(s)",
-							 "skipped due to earlier failure(s)",
-							 "groovy.control.errorcollector.failiferrors",
-							 "erroranalysislib.cpp",
-			 				 "erroranalysislib",
-			 				 ";>failure</h1>",
-							 "exitonfailure","errorlogger",
-							 "if (enoerror !","eusererrorcode",
-			 				 "ekernelerrorcode","errorlib",
-			 				 "--disable-werror","lasterror.",
-							 "failed!",
-							 "--skip-recursive",
-							 "error: timeout after",
-							 "error: error: no workspace found!",
-			 				 "running on ",
-			 				 "error_lib.","_error.c",
-			 				 "tx_thread_stack_error_handler.c",
-							 "tx_thread_stack_error_notify.c",
-			 				 "error_id.h",
-			 				 "error_isolation.c",
-			 				 "scriptcompletionorfailurestatus",
-							 "error.png","controlopstatus[] = { ",
-			 				 "updatingerrormsgforfilenotfound",
-			 				 "libgpg-error.so.0","../../sources/",
-							 "testerrorverification","errors_config.csv",
-			 				 "'strerror'"," retryerror","build errors",
-							 "summary: 1 task failed:",
-							 "libgpg-error-1.35-r0",
-			 				 "libgpg-error-native-1.35-r0",
-			 				 "libgpg-error_1.35.bb","0 errors.",
-		 					 "note: tasks summary:",
-							 "libgpg-error_1.36.bb",
-							 "libgpg-error-1.36-r0",
-			 				 "libgpg-error-native-1.36-r0",
-			 				 "summary:","/system_error",
-		 					 "error_constants.h","failures:",
-			 				 "test_parity error injection",
-			 				 "head is now at","libgpg-error","eventfacet-error",
-			 				 "error summary","check error:",
-		 					 "warning:",": [ {","*** [install] error 1",
-			 				 "error: script returned exit code",
-		 					 "data-error-fix.patch",
-			 				 "error-semi-colon-missing.patch",
-			 				 "0153-sha256_hcu_failure_fix.patch",
-			 				 "link-error-for-smcc-calls.patch",
-		 					 "not found modules for:",
-			 				 "not found deltainfo for:",
-			 				 "not found updateinfo for:",
-			 				 "not found other for:",
-		 					 "xlink_error","note: ",
-			 				 "errormessagedataexchanger.c",
-							 "ioerror:",
-		 					 "download&failedmirror",
-		 					 "errors occurred!",
-		 					 "cmakeerror.log",
-		 					 "-wno-error=",
-							 "applying:",
-		 					 "error.patch",
-		 					 "opencv.patch"]
-        }
+            "failed to sign: ",
+            "abi_info:",
+            "[debug]",
+            "errorlog.c",
+            "error.cpp",
+            "commit message:",
+            "echo",
+            "onerrorcontinueanalysis",
+            "pending error messages",
+            "handle_error",
+            "raise error",
+            "diagnostic: edss2 : json call",
+            "errorlib.c",
+            "0 error(s)",
+            "erroruixmlwriter.cpp",
+            "error.h",
+            "errorhandlingcontroller.js",
+            "errorlib.lib errorlib.obj",
+            "errorlib.obj  errorlib.lib",
+            "c:\\program files (x86)\\microsoft visual studio",
+            "release>cd c:\\jenkins\\workspace",
+            "release>nmake clean all",
+            "pluginuixmlwriter.obj rootuixmlwriter.obj",
+            ">if 0 neq 0 goto eof",
+            "warning:root:[abi_warn_00000010]",
+            "failed in branch",
+            "cache entry deserialization failed",
+            "enoerror",
+            "eusererrorcode",
+            "werror",
+            "running on node:",
+            "\\..\\sources\\graph",
+            "error  ...",
+            "acpi....",
+            "packages\\errorlib\\winx64\\debug",
+            "xlsdk_input.lib(_error.obj) : warning",
+            ": warning c","error(s) and ",
+            "no error and failure messages",
+            "finished: failure",
+            "job failed!!!",
+            "build failed.","_tdperrormessage",
+            "2 error(s)",
+            "skipped due to earlier failure(s)",
+            "groovy.control.errorcollector.failiferrors",
+            "erroranalysislib.cpp",
+            "erroranalysislib",
+            ";>failure</h1>",
+            "exitonfailure","errorlogger",
+            "if (enoerror !","eusererrorcode",
+            "ekernelerrorcode","errorlib",
+            "--disable-werror","lasterror.",
+            "failed!",
+            "--skip-recursive",
+            "error: timeout after",
+            "error: error: no workspace found!",
+            "running on ",
+            "error_lib.","_error.c",
+            "tx_thread_stack_error_handler.c",
+            "tx_thread_stack_error_notify.c",
+            "error_id.h",
+            "error_isolation.c",
+            "scriptcompletionorfailurestatus",
+            "error.png","controlopstatus[] = { ",
+            "updatingerrormsgforfilenotfound",
+            "libgpg-error.so.0","../../sources/",
+            "testerrorverification","errors_config.csv",
+            "'strerror'"," retryerror","build errors",
+            "summary: 1 task failed:",
+            "libgpg-error-1.35-r0",
+            "libgpg-error-native-1.35-r0",
+            "libgpg-error_1.35.bb","0 errors.",
+            "note: tasks summary:",
+            "libgpg-error_1.36.bb",
+            "libgpg-error-1.36-r0",
+            "libgpg-error-native-1.36-r0",
+            "summary:","/system_error",
+            "error_constants.h","failures:",
+            "test_parity error injection",
+            "head is now at","libgpg-error","eventfacet-error",
+            "error summary","check error:",
+            "warning:",": [ {","*** [install] error 1",
+            "error: script returned exit code",
+            "data-error-fix.patch",
+            "error-semi-colon-missing.patch",
+            "0153-sha256_hcu_failure_fix.patch",
+            "link-error-for-smcc-calls.patch",
+            "not found modules for:",
+            "not found deltainfo for:",
+            "not found updateinfo for:",
+            "not found other for:",
+            "xlink_error","note: ",
+            "errormessagedataexchanger.c",
+            "ioerror:",
+            "download&failedmirror",
+            "errors occurred!",
+            "cmakeerror.log",
+            "-wno-error=",
+            "applying:",
+            "error.patch",
+            "opencv.patch"
+        ]
+    }
 }
