[SPLUNK] Error patterns changed to lower case

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -15,26 +15,24 @@
             "does not exist",
             "there are no nodes",
             "not recognized",
-            "[ERROR]",
-            "HTTPError",
-            "URLError",
-            "CONFLICT",
+            "httperror",
+            "urlerror",
+            "conflict",
             "stderr"
         ],
         
         "error_category": {
             "gitlab error": "Application Error: Gitlab",
             "unable to access 'https://gitlab.devtools.intel.com": "Application Error: Gitlab",
-            "GitLab is not responding": "Connectivity Error: Gitlab",
+            "gitLab is not responding": "Connectivity Error: Gitlab",
             
             "artifact error": "Connectivity Error: Artifactory",
             "artifactory": "Connectivity Error: Artifactory",
-            "Artifactory": "Connectivity Error: Artifactory",
             "uploading artifacts": "Connectivity Error: Artifactory",
-            "Expectation Failed": "Application Error: Artifactory",
+            "expectation failed": "Application Error: Artifactory",
             
             "keyerror:": "Key Error",
-            "PriKey Size is NOT same as PubKey": "Key Error",
+            "priKey size is not same as pubkey": "Key Error",
             
             "nameerror:": "Name Error",
             
@@ -64,7 +62,7 @@
             "connection timed out": "Connectivity Error",
             "failed to fetch": "Connectivity Error",
             
-            "Error cloning": "Connectivity Error: GIT",
+            "error cloning": "Connectivity Error: GIT",
             "git clone": "Connectivity Error: GIT",
             "cloning the git-repo": "Connectivity Error: GIT",
             
@@ -74,7 +72,7 @@
             
             "cannot load":"Load Error",
             
-            "A mandatory update for edkrepo": "System Error",
+            "mandatory update for edkrepo": "System Error",
             
             "package_write_rpm": "Compilation Error",
             "requires: openvino": "Compilation Error",
@@ -108,37 +106,37 @@
             "do_configure" : "Compilation Error",
             "error: nothing rprovides" :"Compilation Error",
             "error: required build" :"Compilation Error",
-            "Merge conflict": "Compilation Error",
-            "Makefile:1756": "Compilation Error",
+            "merge conflict": "Compilation Error",
+            "makefile:1756": "Compilation Error",
             "core-image-ese-dev-1.0-r0 do_image_wic": "Compilation Error",
             "following arguments are required": "Compilation Error",
-            "Failed to load image": "Compilation Error" ,
+            "failed to load image": "Compilation Error" ,
             "not recognized as an internal or external command,": "Compilation Error" ,
-            "Failed to build module": "Compilation Error" ,
+            "failed to build module": "Compilation Error" ,
             "failed with exit code '1'": "Compilation Error" ,
             "failed with exit code 1": "Compilation Error" ,
             "exit code: 1": "Compilation Error",
             "non-zero exit code": "Compilation Error" ,
-            "Failed to merge": "Compilation Error" ,
+            "failed to merge": "Compilation Error" ,
             "error U1077": "Compilation Error" ,
-            "ERROR 0004": "Compilation Error" ,
-            "ERROR 1001": "Compilation Error" ,
-            "FSP build": "Compilation Error",
-            "BIOS Build": "Compilation Error",
+            "error 0004": "Compilation Error" ,
+            "error 1001": "Compilation Error" ,
+            "fsp build": "Compilation Error",
+            "bios Build": "Compilation Error",
             "error 7000": "Compilation Error",
-            "Makefile:93": "Compilation Error",
-            "CMake Error": "Compilation Error",
-            "MSB1009": "Compilation Error",
-            "Makefile:1703": "Compilation Error",
-            "Makefile:132": "Compilation Error",
-            "Makefile:24": "Compilation Error",
-            "No such file or directory": "Compilation Error",
-            "GNUmakefile:19": "Compilation Error",
-            "GNUmakefile:74": "Compilation Error",
-            "Makefile:1308": "Compilation Error",
+            "makefile:93": "Compilation Error",
+            "cmake error": "Compilation Error",
+            "msb1009": "Compilation Error",
+            "makefile:1703": "Compilation Error",
+            "makefile:132": "Compilation Error",
+            "makefile:24": "Compilation Error",
+            "no such file or directory": "Compilation Error",
+            "gnumakefile:19": "Compilation Error",
+            "gnumakefile:74": "Compilation Error",
+            "makefile:1308": "Compilation Error",
             
             "configuration error": "Application Error",
-            "Server error": "Application Error",
+            "server error": "Application Error",
             
             "java.lang.": "Java Exception Error",
             "java.io.ioexception": "Java Exception Error",
@@ -153,27 +151,27 @@
             "no such property": "Missing Object Error",
             "does not exist":"Missing Object Error",
             
-            "kwadmin: Connection to": "Connectivity Error: Klocwork",
-            "kwadmin: License check failed": "Application Error: Klocwork",
-            "kwadmin: Cannot load project": "Application Error: Klocwork",
-            "kwadmin: Incompatible server version": "Application Error: Klocwork",
-            "Error occurred during build: Tables directory": "Application Error: Klocwork",
-            "Source list is empty": "Application Error: Klocwork",
+            "kwadmin: connection to": "Connectivity Error: Klocwork",
+            "kwadmin: license check failed": "Application Error: Klocwork",
+            "kwadmin: cannot load project": "Application Error: Klocwork",
+            "kwadmin: incompatible server version": "Application Error: Klocwork",
+            "error occurred during build: tables directory": "Application Error: Klocwork",
+            "source list is empty": "Application Error: Klocwork",
             
-            "Couldn't find any revision to build": "Configuration Error",
+            "couldn't find any revision to build": "Configuration Error",
             "groovy.lang.MissingPropertyException": "Configuration Error",
             
-            "HTTPError: 401 - No permission": "Application Error: BDBA",
-            "HTTPError: 502 - Invalid responses from another server/proxy.": "Connectivity Error: BDBA",
-            "HTTPError: 404 - Nothing matches the given URI": "Application Error: BDBA",
-            "URLError: [Errno 104] Connection reset by peer": "Connectivity Error: BDBA",
-            "Results is not yet ready": "Application Error: BDBA",
-            "Scanning is failed": "Application Error: BDBA",
-            "HTTPError: 503 - The server cannot process the request due to a high load": "Application Error: BDBA",
-            "[Errno 111] Connection refused": "Application Error: BDBA",
+            "httperror: 401 - no permission": "Application Error: BDBA",
+            "httperror: 502 - invalid responses from another server/proxy.": "Connectivity Error: BDBA",
+            "httperror: 404 - nothing matches the given uri": "Application Error: BDBA",
+            "urlerror: [errno 104] connection reset by peer": "Connectivity Error: BDBA",
+            "results is not yet ready": "Application Error: BDBA",
+            "scanning is failed": "Application Error: BDBA",
+            "httprror: 503 - the server cannot process the request due to a high load": "Application Error: BDBA",
+            "[errno 111] connection refused": "Application Error: BDBA",
             
             "bdstool: scan failed": "Application Error: Protex",
-            "BOM list error": "Application Error: Protex"
+            "bom list error": "Application Error: Protex"
             
         },
         
