[SPLUNK] Error category changed to lower case

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -32,7 +32,7 @@
             "expectation failed": "Application Error: Artifactory",
             
             "keyerror:": "Key Error",
-            "priKey size is not same as pubkey": "Key Error",
+            "prikey size is not same as pubkey": "Key Error",
             
             "nameerror:": "Name Error",
             
