[SPLUNK] "cannot stat" added to first level

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -18,7 +18,8 @@
             "httperror",
             "urlerror",
             "conflict",
-            "stderr"
+            "stderr",
+            "cannot stat"
         ],
         
         "error_category": {
