[SPLUNK] updated error category

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -33,7 +33,6 @@
             "expectation failed": "Application Error: Artifactory",
             
             "keyerror:": "Key Error",
-            "prikey size is not same as pubkey": "Key Error",
             
             "nameerror:": "Name Error",
             
@@ -136,6 +135,7 @@
             "gnumakefile:74": "Compilation Error",
             "makefile:1308": "Compilation Error",
             "script returned exit code 255": "Compilation Error",
+            "prikey size is not same as pubkey": "Compilation Error",
             
             "configuration error": "Application Error",
             "server error": "Application Error",
