[SPLUNK] New error category added

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -134,6 +134,7 @@
             "gnumakefile:19": "Compilation Error",
             "gnumakefile:74": "Compilation Error",
             "makefile:1308": "Compilation Error",
+            "makefile:127": "Compilation Error",
             "script returned exit code 255": "Compilation Error",
             "prikey size is not same as pubkey": "Compilation Error",
             
