[SPLUNK] Test Error category added

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -19,7 +19,8 @@
             "urlerror",
             "conflict",
             "stderr",
-            "cannot stat"
+            "cannot stat",
+            "test result"
         ],
         
         "error_category": {
@@ -135,8 +136,9 @@
             "gnumakefile:74": "Compilation Error",
             "makefile:1308": "Compilation Error",
             "makefile:127": "Compilation Error",
-            "script returned exit code 255": "Compilation Error",
             "prikey size is not same as pubkey": "Compilation Error",
+            
+            "test result   :  -1": "Test Error",
             
             "configuration error": "Application Error",
             "server error": "Application Error",
