--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -280,7 +280,12 @@
             "-wno-error=",
             "applying:",
             "error.patch",
-            "opencv.patch"
+            "opencv.patch",
+            "error-inject.o",
+            "error.o",
+            "error-inj.o",
+            "error.mod.o",
+            "error.ko"
         ]
     }
 }
