[SPLUNK] Makefile error combined to one

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -88,7 +88,6 @@
             "do_populate_sdk": "Compilation Error",
             "movisoc-fwu": "Compilation Error",
             "oe_runmake": "Compilation Error",
-            "makefile:70:": "Compilation Error",
             "linux-ese-po-kernel": "Compilation Error",
             "thb-lin-bsp-bd-dly": "Compilation Error",
             "recipe tbh-vpual":"Compilation Error",
@@ -108,7 +107,6 @@
             "error: nothing rprovides" :"Compilation Error",
             "error: required build" :"Compilation Error",
             "merge conflict": "Compilation Error",
-            "makefile:1756": "Compilation Error",
             "core-image-ese-dev-1.0-r0 do_image_wic": "Compilation Error",
             "following arguments are required": "Compilation Error",
             "failed to load image": "Compilation Error" ,
@@ -125,17 +123,10 @@
             "fsp build": "Compilation Error",
             "bios build": "Compilation Error",
             "error 7000": "Compilation Error",
-            "makefile:93": "Compilation Error",
             "cmake error": "Compilation Error",
             "msb1009": "Compilation Error",
-            "makefile:1703": "Compilation Error",
-            "makefile:132": "Compilation Error",
-            "makefile:24": "Compilation Error",
             "no such file or directory": "Compilation Error",
-            "gnumakefile:19": "Compilation Error",
-            "gnumakefile:74": "Compilation Error",
-            "makefile:1308": "Compilation Error",
-            "makefile:127": "Compilation Error",
+            "makefile:": "Compilation Error",
             "prikey size is not same as pubkey": "Compilation Error",
             
             "test result   :  -1": "Test Error",
