[SPUNK] Patterns updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -280,7 +280,38 @@
             "error.mod.o",
             "error.ko",
             "strerror_r",
-            "currror.c.o"
+            "currror.c.o",
+            "error_listener.",
+            "qerrormessage.png",
+            "qerrormessage.html",
+            "qerrormessage-members.html",
+            "error.html",
+            "error-members.html",
+            "error-obsolete.html",
+            "errorhandler.html",
+            "errorhandler-members.html",
+            "error-clang.png",
+            "error-message.png",
+            "errors.ui",
+            "errordialog.qml",
+            "error.qml",
+            "qerrormessage",
+            "qscxmlerror",
+            "qcborerror",
+            "qcborparsererror",
+            "qsystemerror_p.h",
+            "QJsonParseError",
+            "qerrorfn_p.h",
+            "qvalidationerror_p.h",
+            "qsqlerror",
+            "error_messages_p.h",
+            "qdbuserror",
+            "qxmlerrorhandler",
+            "qsslerror",
+            "qqmlerror",
+            "qv4errorobject_p.h",
+            "qv4domerrors_p.h",
+            "qv4sqlerrors_p.h"
         ]
     }
 }
